--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -19,4 +19,12 @@
 
 .App-link {
   color: #09d3ac;
+} */
+
+/* html, body {
+  height: 100%;
 }
+
+#root {
+  height: 100%
+} */
